# cigale

./: .gitignore  .noinstall  Cargo.toml  README.md  build.bat  build.sh  cigale.bat  cigale.sh
src/: main.rs  main_cli.rs  main_nostdl.rs
src/analyser/: mod.rs
src/interpreter/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/stdl/: console.rs  err.rs  io.rs  json.rs  maths.rs  mod.rs  project.rs
src/stdl/err/: funct.rs
src/tests/: graphics_test.cig  impotr.cig  multilist.cig  project.cfg  project.cig  ref.cig  static.cig  stdl_test.cig  test.cig
