[package]
name = "cigale"
version = "0.2.0"
edition = "2024"

[features]
default = []
stdl = ["serde_json"]
serde_json = ["dep:serde_json"]

[[bin]]
name = "cigale_stdl"
path = "src/main.rs"
required-features = ["stdl"]

[[bin]]
name = "cigale_nostdl"
path = "src/main_nostdl.rs"

[[bin]]
name = "cigale_cli"
path = "src/main_cli.rs"


[dependencies]
serde_json = { version = "1.0", optional = true }
